webappwar.yml
apiVersion: apps/v1 
kind: Deployment
metadata:
    name: webapp
spec:
    selector:
        matchLabels:
          app: webapp
    replicas: 2 
    template:
        metadata:
        
          labels:
            app: webapp
        spec:
          containers:
          - name: webapp
            image: sasidhardw/webapp
            ports:
            - containerPort: 8080
