svc_sample.yml
apiVersion: v1
kind: Service
metadata:
  name: samplewar
spec:
  ports:
   - port: 8080
     targetPort: 8080
     protocol: TCP
     name: http
  selector:
        app: samplewar
  type: NodePort
