svc_webapp.yml
apiVersion: v1
kind: Service
metadata:
  name: webapp
spec:
  ports:
   - port: 8080
     targetPort: 8080
     protocol: TCP
     name: http
  selector:
        app: webapp
  type: NodePort
