ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /sample
          backend:
            serviceName: samplewar
            servicePort: 8080
        - path: /webapp
          backend:
            serviceName: webapp
            servicePort: 8080
